# data-modeling-mysql

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
bookmodeling/: __main__.py  api_request.py  db_models.py  exceptions.py  load.py  utils.py  validators.py
tests/: conftest.py  test_api_request.py  test_load.py  test_utils.py  test_validators.py
tests/raw_data_sample/adventure/2025-06-10/: start_index_0.json  start_index_1.json
tests/raw_data_sample/adventure/2025-06-21/: start_index_0.json  start_index_1.json
tests/raw_data_sample/exciting/2025-06-21/: start_index_0.json
tests/raw_data_sample/haunted/2025-06-21/: start_index_0.json
tests/raw_data_sample/scary/2025-06-25/: start_index_0.json  start_index_1.json
tests/validation_output/romantic/2025-08-05/: output_0.json
tests/validation_output/romantic/2025-08-07/: output_0.json
tests/validation_output/scary/2025-06-25/: output_0.json
