[tool.poetry]
name = "data-modeling-mysql"
version = "0.1.0"
description = ""
authors = ["Joe <joesanchez2393@gmail.com>"]
readme = "README.md"
packages = [{include = "bookmodeling"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
freezegun = "^1.5.2"
pytest-freezer = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
